# group-shuffler-rs

./: Cargo.toml  README.md  group-shuffler.scm
src/: main.rs
