[package]
name = "csv_shuffler"
version = "0.1.0"
edition = "2024"
authors = ["Sébastien LUCAS"]

[dependencies]
csv = { version = "1.3.1" }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive"] }
rand = "0.9.1"
chrono = "0.4.41"
diceware_wordlists = "1.2.3"